<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.sobre.SobreFragment">

    <ImageView
        android:id="@+id/ivSplashLogo"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:layout_marginTop="20dp"
        android:src="@drawable/excelsior"
        android:contentDescription="@string/todo" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:textAlignment="center"
        android:textColor="@color/texto_sobre"
        android:text="@string/versao"
        android:textStyle="bold"
        android:textSize="16sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="bottom"
        android:text="@string/desenvolvedor"
        android:textStyle="bold"
        android:textSize="16sp"
        android:textAlignment="center"
        android:textColor="@color/texto_sobre" />

</FrameLayout>